remove android warn java.awt